# maniascript-parser

./: .gitignore  .gitmodules  Cargo.toml  HungerGames.Script.txt  ObstacleLib.Script.txt  README.md  rustfmt.toml  test.Script.txt  todo.org
lib_macros/: Cargo.toml
lib_maniascript/: Cargo.toml
lib_maniascript/benches/: Obstacle.Script.txt  parser_benchmark.rs
lib_maniascript/src/: ast.rs  document.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  symbols.rs  validator.rs
lib_maniascript/src/ast/: node_kind.rs  printer.rs
lib_maniascript/src/document/: symbol.rs  type.rs
lib_maniascript/src/lexer/: token.rs  token_kind.rs  trivia_kind.rs
lib_maniascript/src/parser/: language.rs  parser.rs  syntax_kind.rs  tokenizer.rs  typed_node.rs
lib_maniascript/test_data/parser/control_flow/: For.expected  For.ms  Foreach.expected  Foreach.ms  IfElse.expected  IfElse.ms  Switch.expected  Switch.ms  While.expected  While.ms  breaks.expected  breaks.ms
lib_maniascript/test_data/parser/declarations/: FuncDecl.expected  FuncDecl.ms  LabelDecl.expected  LabelDecl.ms  VarDecl.expected  VarDecl.ms
lib_maniascript/test_data/parser/directives/: Command.expected  Command.ms  Const.expected  Const.ms  Extends.expected  Extends.ms  Include.expected  Include.ms  RequireContext.expected  RequireContext.ms  Setting.expected  Setting.ms  Struct.expected  Struct.ms
lib_maniascript/test_data/parser/expressions/: cast.expected  cast.ms  const_simple_expr.expected  const_simple_expr.ms  label_calls.expected  label_calls.ms  nested_function_calls.expected  nested_function_calls.ms  simple_arrays.expected  simple_arrays.ms  simple_expr.expected  simple_expr.ms  vec_expr.expected  vec_expr.ms
lib_mswasm/: Cargo.toml  LICENSE_MIT  README.md
manialsp/: Cargo.toml  README.md
manialsp/src/: app.rs  app_state.rs  codecs.rs  glue.rs  handlers.rs  main.rs  server.rs
manialsp/src/app/: handlers.rs  main_loop.rs
manialsp/src/handlers/: initialize.rs  shutdown.rs  text_document.rs
msfmt/: Cargo.toml  HungerGames.Script.dot  ObstacleLib.Script.dot  README.md  formatted-HungerGames.Script.txt  formatted-test.Script  (+2 more)
(+22 files in other folders)
