[package]
name = "lib_maniascript"
version = "0.1.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
rowan = "0.9.0"
cbitset = "0.2.0"

strum = "0.15.0"
strum_macros = "0.15.0"
lib_macros = { path = "../lib_macros" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser_benchmark"
harness = false