[package]
name = "lib_maniascript"
description = "A library to manipulate ManiaScript code"
repository = "https://github.com/Vincent-P/maniascript-rust/lib_maniascript"
version = "0.1.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"
license = "MIT"
exclude = [
    "test_data",
]

[dependencies]
rowan = "0.9.0"
cbitset = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser_benchmark"
harness = false