[package]
name = "manialsp"
version = "0.3.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
log = "0.4.8"
flexi_logger = "0.14.1"
tokio = "0.1.22"
bytes = "0.4.12"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"
jsonrpc-core = "13.0.0"
serde = "1.0.99"
serde_json = "1.0.40"
lib_maniascript = { path = "../lib_maniascript" }
lsp-types = { path = "../lsp-types" }
