[package]
name = "manialsp"
version = "0.4.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
log = "0.4.8"
flexi_logger = "0.14.1"
lib_maniascript = { path = "../lib_maniascript" }
lsp-server = "0.3.1"
lsp-types = "0.70.0"
serde = "1.0.104"
serde_json = "1.0.45"