[package]
name = "manialsp"
version = "0.5.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
log = "0.4.8"
flexi_logger = "0.14.1"
lib_maniascript = { path = "../lib_maniascript" }
serde = "1.0.104"
serde_json = "1.0.45"
tower-lsp = "0.11.0"
tokio = { version = "0.2", features = ["full"] }
dashmap = "4.0.0-rc6"